project(behavioral_patterns)

# 다른 행동 패턴 추가
add_subdirectory(command_pattern)
add_subdirectory(mediator_pattern)
add_subdirectory(memento_pattern)
add_subdirectory(COR_pattern)
add_subdirectory(iterator_pattern)
add_subdirectory(observer_pattern)
add_subdirectory(state_pattern)
add_subdirectory(strategy_pattern)
add_subdirectory(template_method_pattern)
add_subdirectory(visitor_pattern)